# codegram

./: .env.example  .gitignore  .gitlab-ci.yml  CLAUDE.md  CONTEXT.md  README.md  docker-compose.yml
backend/: Dockerfile  Dockerfile.ci  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4b3ea60ab673_create_project_table.py  716c3c7afaf0_create_user_table.py  753699a5f483_add_rbac.py  a1b2c3d4e5f6_create_project_snapshot_table.py  b7c8d9e0f1a2_add_project_bg_color.py  c1d2e3f4a5b6_add_collaboration_tables.py  d1e2f3a4b5c6_add_snapshot_author.py  fd4bb0e7766f_add_project_glyph_color.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  router.py
backend/app/core/: __init__.py  config.py  permissions.py  (+1 more)
backend/tests/: conftest.py  test_access.py  test_accounts.py  test_admins_public.py  test_app.py  test_auth.py  test_auth_routes.py  test_authz.py  test_change_password.py  test_config.py  test_edit_lock.py  test_health.py  test_introspect_routes.py  test_introspect_schemas.py  test_introspect_service.py  test_lock_service.py  test_member_service.py  test_members.py  test_project_access.py  test_project_edit_lock_model.py  test_project_member_model.py  test_project_model.py  test_project_repository.py  test_project_schemas.py  test_project_service.py  test_projects.py  test_projects_smoke.py  test_rbac_model.py  test_rbac_repo.py  test_roles.py  test_seed_admin.py  test_session.py  test_session_commit.py  test_smoke.py  test_snapshot_access.py  test_snapshot_jobs.py  test_snapshots.py  test_user_model.py  test_users_core.py
(+477 files in other folders)
